fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ main div.facebook iframe{
         margin: 1rem;
         padding: 1rem;
         display: block;
-        width: 450px;
+        width: 400px;
         height: 700px;
         flex-direction: row;
         justify-content: center;
